# cargo-projects

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml
.codeberg/workflows/: ci.yml
docs/: Installation.md  Motivation.md  Overview.md  Usage.md
src/: lib.rs  main.rs
src/commands/: clean.rs  clean_watchers.rs  cli.rs  list.rs  mod.rs  refresh.rs  scan.rs  update.rs  watchers.rs
src/commands/shared/: mod.rs  rust_project_parser.rs  size_calculator.rs  timing.rs
src/infrastructure/: filesystem.rs  mod.rs
src/output/: output.rs
src/repositories/: config_repository.rs  mod.rs  project_repository.rs  watcher_repository.rs
src/services/: config_service.rs  mod.rs  project_service.rs  service_factory.rs  watcher_service.rs
src/types/: errors.rs  types.rs
tests/: commands.rs
